--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -2,10 +2,12 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Multimídia</title>
+    <title>Fale Conosco</title>
     <link rel="icon" type="image/x-icon" href="_imagens/glass-oculos-preto-peq.png"> <!--Icone do site-->
 
-    <link rel="stylesheet" href="_css/estilo.css"> <!-- Arquivo CSS -->
+    <link rel="stylesheet" href="_css/estilo.css"> <!-- Arquivo CSS GERAL -->
+    <link rel="stylesheet" href="_css/form.css"> <!-- Arquivo CSS especifico -->
+
     <script language="javascript" src="_javascript/funcoes.js"></script> <!-- Arquivo JavaScript -->
     <!--end head-->
 
@@ -34,8 +36,7 @@
                     <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/contato.png')">
                         <a href="fotos.html">Fotos</a>
                     </li>
-                    <li onmouseover="mudaFoto('_imagens/multimidia.png')"
-                        onmouseout="mudaFoto('_imagens/contato.png')">
+                    <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/contato.png')">
                         <a href="fotos.html"> <a href="multimidia.html">Multimídia</a>
                     </li>
                     <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/contato.png')">
@@ -47,40 +48,95 @@
         </header>
         <!--end cabecalho-->
 
+        <!--begin corpo-->
+        <section id="corpo-full">
+            <article id="noticia-principal">
 
-        Fale Conosco > Contato
-        Formulário de Contato
-        por Gustavo Guanabara
-        Atualizado em 01/Maio/2013
+                <header id="cabecalho-artigo">
+                    <hgroup>
+                        <h3>Fale Conosco > Contato</h3>
+                        <h1>Formulário de Contato</h1>
+                        <h2>Por: Bruno Aguiar</h2>
+                        <h3 class="direita">Atualizado em 15/Abril/2025</h3>
+                    </hgroup>
+                </header>
 
-        Identificação do Usuário
-        Nome:
-        Senha:
-        E-mail:
-        Sexo:
-        - Masculino
-        - Feminino
-        Data de Nascimento:
+                <form method="post" id="fContato" action="mailto:mcpepita20@gmail.com">
+                    <fieldset id="usuario">
+                        <legend> Identificação do Usuário </legend>
+                        <p> 
+                            <label for="cNome">Nome:</label>
+                            <input type="text" name="tNome" id="cNome" size="20" maxlength="30" placeholder="Nome Completo"/>
+                        </p>
+                        <p>
+                            <label for="cSenha">Senha:</label>
+                            <input type="password" name="tSenha" id="cSenha" size="8" maxlength="8" placeholder="8 digitos"/>
+                        </p>
+                        <p>
+                            <label for="cMail">E-mail:</label> 
+                            <input type="email" name="tMail" id="cMail" size="20" maxlength="40" placeholder="Digite o seu e-mail" />  
+                        </p>
+                        <fieldset id="sexo">
+                            <legend>Sexo:</legend>
+                                <input type="radio" name="tSexo" id="cMasc"> <label for="cMasc">Masculino</label> <br/>
+                                <input type="radio" name="tSexo" id="cFem"><label for="cFem">Feminino</label>
+                        </fieldset>
+                        <p>
+                            <label for="cNasc">Data de Nascimento:</label>
+                            <input type="date" name="tNasc" id="cNasc">
+                        </p>
+                    </fieldset>
 
-        Endereço do Usuário
-        Logradouro:
-        Número:
-        Estado:
-        Cidade:
+                    <fieldset id="endereco">
+                        <legend> Endereço do Usuário </legend>
+                        <p>
+                            <label for="cRua">Logradouro: </label>
+                            <input type="text" name="tRua" id="cRua" size="50" maxlength="80" placeholder="Rua, Av., "> 
+                        </p>
+                        <p>
+                            <label for="cNum">Número:</label>
+                            <input type="number" name="tNum" id="cNum" min="0" max="9999" > 
+                        </p>
+                        <p>
+                            <label for="cEst">Estado:</label>
+                            <select name="tEst" id="cEst">
+                                <option selected>Minas Gerais</option>
+                                <option>São Paulo</option>
+                                <option>Rio de Janeiro</option>
+                                <option>Pará</option>
+                                <option>Goiás</option>
+                                <option>Manaus</option>
+                            </select>
+                        </p>
+                        <p>
+                            <label for="">Cidade:</label>
+                            <input type="text">
+                        </p>
 
-        Mensagem do Usuário
-        Grau de Urgência:
-        Mensagem:
+                    </fieldset>
 
-        Quero um Google Glass
-        Gostaria de adquirir um Google Glass quando disponível
-        Cor:
-        Quantidade:
-        Preço Total: R$
+                    <fieldset id="mensagem">
+                        <legend> Mensagem do Usuário </legend>
+                        Grau de Urgência:
+                        Mensagem:
+
+                    </fieldset>
+
+                    <fieldset id="pedido">
+                        <legend> Quero um Google Glass </legend>
+                        Gostaria de adquirir um Google Glass quando disponível
+                        Cor:
+                        Quantidade:
+                        Preço Total: R$
+                    </fieldset>
 
 
-        [BOTÃO ENVIAR]
+                    [BOTÃO ENVIAR]
+                </form>
 
+            </article>
+        </section>
+        <!--end corpo-->
         <!--begin rodape-->
         <footer id="rodape">
             <p>Copyright &copy; 2025 - by Bruno Aguiar <br>
